--- a/html/list.html
+++ b/html/list.html
@@ -40,9 +40,9 @@
 			</div>
 		</div>
 		<div class="warning">
-			This service has been mostly discontinued, though GoAnimate Wrapper may periodically undergo security
-			updates.<br><a href='https://github.com/Windows81/GoAnimate-Wrapper'>Link
-				to the source code on GitHub (private)</a>
+			These is Vyond Legacy Video Maker is Retired of Old GoAnimate Wrapper is Legacy Video Maker Don't Expose
+			These don't patch GAWrapper <br>
+				
 		</div>
 	</header>
 	<table>
