--- a/html/list.html
+++ b/html/list.html
@@ -41,7 +41,7 @@
 		</div>
 		<div class="warning">
 			These is Vyond Legacy Video Maker is Retired of Old GoAnimate Wrapper is Legacy Video Maker Don't Expose
-			These don't patch GAWrapper <br>
+			These don't patch GAWrapper Original is Old GAWrapper<br>
 				
 		</div>
 	</header>
