--- a/html/list.html
+++ b/html/list.html
@@ -241,7 +241,7 @@
 		.warning {
 			font-size: 14px;
 			padding: 10px 0;
-			background-color: #fd7;
+			background-color: #fff;
 			text-align: center;
 		}
 
@@ -253,7 +253,7 @@
 		}
 
 		.warning>a {
-			color: #5596e6;
+			color: #F41100;
 		}
 
 		table {
